# Live_ObjectDetection

./: CMakeLists.txt  main.cpp
